--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "crypto": "^1.0.1",
     "miniprogram-computed": "^2.1.1",
     "miniprogram-sm-crypto": "^0.1.0"
   },
