--- a/app.json
+++ b/app.json
@@ -1,15 +1,14 @@
 {
   "pages": [
     "pages/home/home",
-    "pages/component/search/search",
     "pages/mine/mine",
-    "pages/component/customer/customer",
     "pages/mall/mall",
     "pages/cart/cart",
     "pages/home/coupons/coupon",
     "pages/mall/sorts/sorts",
     "pages/mine/myCoupon/myCoupon",
-    "pages/login/login"
+    "pages/login/login",
+    "pages/component/orderConfirm/orderConfirm"
   ],
   "window": {
     "backgroundTextStyle": "light",
